Checkpoint: Tradução completa da aplicação para inglês: páginas Lojas, Gestores, Relatorios, RelatorioLivre, Pendentes, MinhasLojas, AssistenteIA, Todos, MeusRelatorios, GestaoUtilizadores. Ficheiros de tradução PT e EN expandidos com todas as chaves necessárias.

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -113,7 +113,46 @@
     "proxima": "Next",
     "anterior": "Previous",
     "sim": "Yes",
-    "nao": "No"
+    "nao": "No",
+    "acoes": "Actions",
+    "nome": "Name",
+    "email": "Email",
+    "pesquisar": "Search",
+    "filtrar": "Filter",
+    "exportar": "Export",
+    "importar": "Import",
+    "selecionarTodos": "Select all",
+    "semResultados": "No results",
+    "carregarMais": "Load more",
+    "atualizar": "Refresh",
+    "novo": "New",
+    "criar": "Create",
+    "adicionar": "Add",
+    "remover": "Remove",
+    "detalhes": "Details",
+    "total": "Total",
+    "ativo": "Active",
+    "inativo": "Inactive",
+    "todos": "All",
+    "nenhum": "None",
+    "data": "Date",
+    "hora": "Time",
+    "descricao": "Description",
+    "observacoes": "Notes",
+    "notas": "Notes",
+    "anexos": "Attachments",
+    "fotos": "Photos",
+    "ficheiros": "Files",
+    "download": "Download",
+    "upload": "Upload",
+    "enviar": "Send",
+    "submeter": "Submit",
+    "aprovar": "Approve",
+    "rejeitar": "Reject",
+    "pendente": "Pending",
+    "concluido": "Completed",
+    "emProgresso": "In Progress",
+    "atrasado": "Overdue"
   },
   "menu": {
     "groups": {
@@ -187,7 +226,29 @@
     "signIn": "Sign In",
     "signInContinue": "Sign in to continue",
     "signInRequired": "Access to this dashboard requires authentication. Continue to launch the login flow.",
-    "signOut": "Sign Out"
+    "signOut": "Sign Out",
+    "minhasLojas": "My Stores",
+    "lojasGestao": "Stores under your management",
+    "relatoriosLivres": "Free Reports",
+    "relatoriosCompletos": "Complete Reports",
+    "esteMes": "This month",
+    "vsMesAnterior": "vs prev. month",
+    "novos": "new",
+    "novo": "new",
+    "gerarDica": "Generating tip...",
+    "dicaPadrao": "Everything is in order! Keep up the good work.",
+    "relatoriosIA": "AI Reports",
+    "relatorioMensal": "Monthly Report",
+    "minhasTarefas": "My Tasks",
+    "tarefas": "Tasks",
+    "atencaoAtrasos": "Attention: Stores with overdue reports",
+    "abaixoMinimo": "The following stores are below the expected monthly minimum:",
+    "livres": "Free",
+    "completos": "Complete",
+    "minimoMensal": "monthly minimum",
+    "criarRelatorio": "Create Report",
+    "gerarResumo": "Generate Summary",
+    "semVariacao": "No variation"
   },
   "auth": {
     "signIn": "Sign In",
@@ -198,5 +259,384 @@
   "theme": {
     "dark": "Dark Mode",
     "light": "Light Mode"
+  },
+  "lojas": {
+    "title": "Stores",
+    "subtitle": "Manage Express Glass network stores",
+    "novaLoja": "New Store",
+    "editarLoja": "Edit Store",
+    "eliminarLoja": "Delete Store",
+    "importarExcel": "Import Excel",
+    "descarregarTemplate": "Download Template",
+    "nome": "Name",
+    "email": "Email",
+    "gestor": "Manager",
+    "acoes": "Actions",
+    "selecionarTodas": "Select all",
+    "eliminarSelecionadas": "Delete",
+    "confirmarEliminar": "Are you sure you want to delete this store?",
+    "confirmarEliminarMultiplas": "Are you sure you want to delete the selected stores?",
+    "lojaCriada": "Store created successfully",
+    "lojaAtualizada": "Store updated successfully",
+    "lojaEliminada": "Store deleted successfully",
+    "lojasEliminadas": "store(s) deleted successfully",
+    "lojasImportadas": "store(s) imported",
+    "lojasIgnoradas": "store(s) ignored (already exist)",
+    "errosEncontrados": "error(s) found",
+    "templateDescarregado": "Template downloaded successfully",
+    "selecionarFicheiro": "Select an Excel file",
+    "previewImportacao": "Import Preview",
+    "importar": "Import",
+    "cancelar": "Cancel",
+    "minimoRelatoriosLivres": "Minimum Free Reports",
+    "minimoRelatoriosCompletos": "Minimum Complete Reports",
+    "semLojas": "No stores registered",
+    "criarPrimeiraLoja": "Create the first store to get started"
+  },
+  "gestores": {
+    "title": "Managers",
+    "subtitle": "Manage Express Glass network managers",
+    "novoGestor": "New Manager",
+    "editarGestor": "Edit Manager",
+    "eliminarGestor": "Delete Manager",
+    "nome": "Name",
+    "email": "Email",
+    "role": "Role",
+    "lojas": "Stores",
+    "acoes": "Actions",
+    "selecionarTodos": "Select all",
+    "eliminarSelecionados": "Delete",
+    "confirmarEliminar": "Are you sure you want to delete this manager?",
+    "confirmarEliminarMultiplos": "Are you sure you want to delete the selected managers?",
+    "gestorCriado": "Manager created successfully",
+    "gestorAtualizado": "Manager updated successfully",
+    "gestorEliminado": "Manager deleted successfully",
+    "gestoresEliminados": "manager(s) deleted successfully",
+    "semGestores": "No managers registered",
+    "criarPrimeiroGestor": "Create the first manager to get started",
+    "associarLojas": "Associate Stores",
+    "lojasAssociadas": "Associated Stores",
+    "lojasDisponiveis": "Available Stores",
+    "lojaAssociada": "Store associated successfully",
+    "lojaRemovida": "Store removed successfully",
+    "promoverAdmin": "Promote to Admin",
+    "confirmarPromocao": "Are you sure you want to promote this manager to administrator?",
+    "gestorPromovido": "Manager promoted to administrator successfully",
+    "admin": "Administrator",
+    "gestor": "Manager",
+    "pesquisarLojas": "Search stores..."
+  },
+  "utilizadores": {
+    "title": "Users",
+    "subtitle": "Manage system users",
+    "nome": "Name",
+    "email": "Email",
+    "role": "Role",
+    "estado": "Status",
+    "acoes": "Actions",
+    "ativo": "Active",
+    "pendente": "Pending",
+    "admin": "Administrator",
+    "gestor": "Manager",
+    "user": "User",
+    "semUtilizadores": "No users registered"
+  },
+  "relatorios": {
+    "title": "Reports",
+    "subtitle": "View all reports",
+    "livres": "Free",
+    "completos": "Complete",
+    "todos": "All",
+    "filtrarPorLoja": "Filter by store",
+    "filtrarPorGestor": "Filter by manager",
+    "filtrarPorData": "Filter by date",
+    "de": "From",
+    "ate": "To",
+    "limparFiltros": "Clear filters",
+    "exportarPDF": "Export PDF",
+    "exportarSelecionados": "Export Selected",
+    "semRelatorios": "No reports found",
+    "verDetalhes": "View details",
+    "editarRelatorio": "Edit report",
+    "eliminarRelatorio": "Delete report",
+    "confirmarEliminar": "Are you sure you want to delete this report?",
+    "relatorioEliminado": "Report deleted successfully",
+    "relatorioAtualizado": "Report updated successfully",
+    "enviarEmail": "Send by Email",
+    "emailEnviado": "Email sent successfully",
+    "erroEnviarEmail": "Error sending email",
+    "gestor": "Manager",
+    "loja": "Store",
+    "data": "Date",
+    "tipo": "Type",
+    "descricao": "Description",
+    "apenasNaoVistos": "Only unread",
+    "marcarComoVisto": "Mark as read"
+  },
+  "relatorioLivre": {
+    "title": "Free Report",
+    "subtitle": "Create a new visit report",
+    "selecionarLoja": "Select Store",
+    "dataVisita": "Visit Date",
+    "horaVisita": "Visit Time",
+    "descricao": "Visit Description",
+    "descricaoPlaceholder": "Describe the main points of the visit...",
+    "pendentes": "Pending Items",
+    "adicionarPendente": "Add Pending Item",
+    "fotos": "Photos",
+    "adicionarFotos": "Add Photos",
+    "submeter": "Submit Report",
+    "cancelar": "Cancel",
+    "relatorioCriado": "Report created successfully",
+    "erroCriar": "Error creating report",
+    "camposObrigatorios": "Please fill in all required fields"
+  },
+  "relatorioCompleto": {
+    "title": "Complete Report",
+    "subtitle": "Create a detailed visit report",
+    "selecionarLoja": "Select Store",
+    "dataVisita": "Visit Date",
+    "proximaPagina": "Next Page",
+    "paginaAnterior": "Previous Page",
+    "submeter": "Submit Report",
+    "cancelar": "Cancel",
+    "relatorioCriado": "Report created successfully",
+    "erroCriar": "Error creating report",
+    "paginas": {
+      "episFardamento": "PPE and Uniforms",
+      "kit1sSocorros": "First Aid Kit",
+      "consumiveis": "Consumables",
+      "espacoFisico": "Physical Space",
+      "reclamacoes": "Complaints",
+      "vendasComplementares": "Complementary Sales",
+      "fichasServico": "Service Sheets",
+      "documentacaoObrigatoria": "Mandatory Documentation",
+      "reuniaoQuinzenal": "Bi-weekly Meeting",
+      "resumoColaboradores": "Summary and Employees"
+    },
+    "conforme": "Compliant",
+    "naoConforme": "Non-Compliant",
+    "naoAplicavel": "N/A",
+    "observacoes": "Notes",
+    "pontosPositivos": "Positive Points to Highlight",
+    "pontosNegativos": "Negative Points to Highlight",
+    "resumoSupervisao": "Supervision Summary",
+    "pendentes": "Pending Items"
+  },
+  "meusRelatorios": {
+    "title": "My Reports",
+    "subtitle": "View your reports",
+    "semRelatorios": "You haven't created any reports yet"
+  },
+  "relatoriosIA": {
+    "title": "AI Reports",
+    "subtitle": "Generate automatic reports with artificial intelligence",
+    "tipoRelatorio": "Report Type",
+    "diario": "Daily",
+    "semanal": "Weekly",
+    "mensal": "Monthly",
+    "trimestral": "Quarterly",
+    "gerarRelatorio": "Generate Report",
+    "aGerar": "Generating report...",
+    "relatorioGerado": "Report generated successfully",
+    "erroGerar": "Error generating report",
+    "exportarPDF": "Export PDF",
+    "verHistorico": "View History",
+    "ultimaGeracao": "Last generation",
+    "semDados": "Not enough data to generate this report"
+  },
+  "historicoIA": {
+    "title": "AI History",
+    "subtitle": "History of AI-generated reports",
+    "semHistorico": "No AI reports generated",
+    "tipo": "Type",
+    "data": "Date",
+    "verRelatorio": "View Report",
+    "eliminar": "Delete"
+  },
+  "historicoPontos": {
+    "title": "Points History",
+    "subtitle": "Evolution of positive and negative points by store",
+    "selecionarLoja": "Select Store",
+    "periodo": "Period",
+    "pontosPositivos": "Positive Points",
+    "pontosNegativos": "Negative Points",
+    "semDados": "No data for the selected period"
+  },
+  "historicoLoja": {
+    "title": "Store History",
+    "subtitle": "View complete store history",
+    "selecionarLoja": "Select Store",
+    "relatorios": "Reports",
+    "pendentes": "Pending Items",
+    "reunioes": "Meetings",
+    "ocorrencias": "Occurrences",
+    "semHistorico": "No history for this store"
+  },
+  "alertas": {
+    "title": "Alerts",
+    "subtitle": "Manage system alerts",
+    "pendentes": "Pending",
+    "resolvidos": "Resolved",
+    "todos": "All",
+    "marcarResolvido": "Mark as Resolved",
+    "semAlertas": "No alerts registered",
+    "loja": "Store",
+    "tipo": "Type",
+    "mensagem": "Message",
+    "data": "Date",
+    "estado": "Status",
+    "pontosNegativosConsecutivos": "Consecutive negative points"
+  },
+  "configAlertas": {
+    "title": "Alert Settings",
+    "subtitle": "Configure automatic alert rules",
+    "threshold": "Consecutive negative points threshold",
+    "thresholdDesc": "Number of consecutive reports with negative points to trigger alert",
+    "guardar": "Save Settings",
+    "configuracaoGuardada": "Settings saved successfully"
+  },
+  "reunioesGestores": {
+    "title": "Manager Meetings",
+    "subtitle": "Manage meetings between managers",
+    "novaReuniao": "New Meeting",
+    "semReunioes": "No meetings registered"
+  },
+  "reunioesLojas": {
+    "title": "Store Meetings",
+    "subtitle": "Manage bi-weekly store meetings",
+    "novaReuniao": "New Meeting",
+    "semReunioes": "No meetings registered"
+  },
+  "resultados": {
+    "title": "Results",
+    "subtitle": "Results and metrics dashboard",
+    "uploadTitle": "Upload Results",
+    "uploadSubtitle": "Upload Excel file with results",
+    "dashboardTitle": "Results Dashboard",
+    "dashboardSubtitle": "View metrics and KPIs",
+    "comparacaoTitle": "Store Comparison",
+    "comparacaoSubtitle": "Compare performance between stores",
+    "relatorioIATitle": "AI Results Report",
+    "relatorioIASubtitle": "Automatic results analysis with AI",
+    "mes": "Month",
+    "ano": "Year",
+    "loja": "Store",
+    "vendas": "Sales",
+    "servicos": "Services",
+    "reclamacoes": "Complaints",
+    "satisfacao": "Satisfaction",
+    "semResultados": "No results for the selected period"
+  },
+  "todos": {
+    "title": "To-Do",
+    "subtitle": "Manage tasks and pending items",
+    "novaTarefa": "New Task",
+    "minhasTarefas": "My Tasks",
+    "atribuidas": "Assigned to Me",
+    "criadas": "Created by Me",
+    "todas": "All",
+    "titulo": "Title",
+    "descricao": "Description",
+    "prioridade": "Priority",
+    "dataLimite": "Due Date",
+    "atribuirA": "Assign to",
+    "loja": "Store",
+    "estado": "Status",
+    "pendente": "Pending",
+    "emProgresso": "In Progress",
+    "concluida": "Completed",
+    "baixa": "Low",
+    "media": "Medium",
+    "alta": "High",
+    "urgente": "Urgent",
+    "semTarefas": "No tasks registered",
+    "tarefaCriada": "Task created successfully",
+    "tarefaAtualizada": "Task updated successfully",
+    "tarefaEliminada": "Task deleted successfully"
+  },
+  "pendentesPage": {
+    "title": "Pending Items",
+    "subtitle": "Manage pending items by store",
+    "filtrarPorLoja": "Filter by store",
+    "apenasAtivos": "Active only",
+    "apenasNaoVistos": "Unread only",
+    "marcarResolvido": "Mark as Resolved",
+    "marcarPendente": "Mark as Pending",
+    "semPendentes": "No pending items registered",
+    "loja": "Store",
+    "descricao": "Description",
+    "criadoEm": "Created on",
+    "estado": "Status",
+    "resolvido": "Resolved",
+    "pendente": "Pending"
+  },
+  "ocorrencias": {
+    "title": "Occurrences",
+    "subtitle": "Register and manage occurrences",
+    "novaOcorrencia": "New Occurrence",
+    "historicoTitle": "Occurrence History",
+    "historicoSubtitle": "View occurrence history",
+    "selecionarLoja": "Select Store",
+    "tipo": "Type",
+    "descricao": "Description",
+    "data": "Date",
+    "gravidade": "Severity",
+    "baixa": "Low",
+    "media": "Medium",
+    "alta": "High",
+    "critica": "Critical",
+    "semOcorrencias": "No occurrences registered",
+    "ocorrenciaCriada": "Occurrence registered successfully"
+  },
+  "categorias": {
+    "title": "Categories",
+    "subtitle": "Manage task and occurrence categories",
+    "novaCategoria": "New Category",
+    "nome": "Name",
+    "cor": "Color",
+    "semCategorias": "No categories registered",
+    "categoriaCriada": "Category created successfully",
+    "categoriaEliminada": "Category deleted successfully"
+  },
+  "assistenteIA": {
+    "title": "AI Assistant",
+    "subtitle": "Chat with the intelligent assistant",
+    "placeholder": "Type your message...",
+    "enviar": "Send",
+    "limparConversa": "Clear Conversation",
+    "pensando": "Thinking...",
+    "erro": "An error occurred. Please try again."
+  },
+  "minhasLojas": {
+    "title": "My Stores",
+    "subtitle": "Stores under your management",
+    "semLojas": "You have no assigned stores",
+    "verHistorico": "View History",
+    "criarRelatorio": "Create Report"
+  },
+  "resumosGlobais": {
+    "title": "Global Summaries",
+    "subtitle": "Generate and view global summaries",
+    "gerarResumo": "Generate Summary",
+    "verHistorico": "View History",
+    "tipo": "Type",
+    "semanal": "Weekly",
+    "mensal": "Monthly",
+    "trimestral": "Quarterly",
+    "semResumos": "No summaries generated"
+  },
+  "validation": {
+    "campoObrigatorio": "This field is required",
+    "emailInvalido": "Invalid email",
+    "minimoCaracteres": "Minimum of {min} characters",
+    "maximoCaracteres": "Maximum of {max} characters",
+    "valorInvalido": "Invalid value"
+  },
+  "errors": {
+    "generico": "An error occurred. Please try again.",
+    "semPermissao": "You do not have permission to perform this action.",
+    "sessaoExpirada": "Your session has expired. Please sign in again.",
+    "conexao": "Connection error. Check your internet connection."
   }
 }
