--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -113,7 +113,46 @@
     "proxima": "Próxima",
     "anterior": "Anterior",
     "sim": "Sim",
-    "nao": "Não"
+    "nao": "Não",
+    "acoes": "Ações",
+    "nome": "Nome",
+    "email": "Email",
+    "pesquisar": "Pesquisar",
+    "filtrar": "Filtrar",
+    "exportar": "Exportar",
+    "importar": "Importar",
+    "selecionarTodos": "Selecionar todos",
+    "semResultados": "Sem resultados",
+    "carregarMais": "Carregar mais",
+    "atualizar": "Atualizar",
+    "novo": "Novo",
+    "criar": "Criar",
+    "adicionar": "Adicionar",
+    "remover": "Remover",
+    "detalhes": "Detalhes",
+    "total": "Total",
+    "ativo": "Ativo",
+    "inativo": "Inativo",
+    "todos": "Todos",
+    "nenhum": "Nenhum",
+    "data": "Data",
+    "hora": "Hora",
+    "descricao": "Descrição",
+    "observacoes": "Observações",
+    "notas": "Notas",
+    "anexos": "Anexos",
+    "fotos": "Fotos",
+    "ficheiros": "Ficheiros",
+    "download": "Descarregar",
+    "upload": "Carregar",
+    "enviar": "Enviar",
+    "submeter": "Submeter",
+    "aprovar": "Aprovar",
+    "rejeitar": "Rejeitar",
+    "pendente": "Pendente",
+    "concluido": "Concluído",
+    "emProgresso": "Em Progresso",
+    "atrasado": "Atrasado"
   },
   "menu": {
     "groups": {
@@ -187,7 +226,29 @@
     "signIn": "Iniciar Sessão",
     "signInContinue": "Inicie sessão para continuar",
     "signInRequired": "O acesso a este dashboard requer autenticação. Continue para iniciar o fluxo de login.",
-    "signOut": "Terminar Sessão"
+    "signOut": "Terminar Sessão",
+    "minhasLojas": "Minhas Lojas",
+    "lojasGestao": "Lojas sob sua gestão",
+    "relatoriosLivres": "Relatórios Livres",
+    "relatoriosCompletos": "Relatórios Completos",
+    "esteMes": "Este mês",
+    "vsMesAnterior": "vs mês ant.",
+    "novos": "novos",
+    "novo": "novo",
+    "gerarDica": "A gerar dica...",
+    "dicaPadrao": "Tudo em ordem! Continua o bom trabalho.",
+    "relatoriosIA": "Relatórios IA",
+    "relatorioMensal": "Relatório Mensal",
+    "minhasTarefas": "Minhas Tarefas",
+    "tarefas": "Tarefas",
+    "atencaoAtrasos": "Atenção: Lojas com relatórios em atraso",
+    "abaixoMinimo": "As seguintes lojas estão abaixo do mínimo mensal esperado:",
+    "livres": "Livres",
+    "completos": "Completos",
+    "minimoMensal": "mínimo mensal",
+    "criarRelatorio": "Criar Relatório",
+    "gerarResumo": "Gerar Resumo",
+    "semVariacao": "Sem variação"
   },
   "auth": {
     "signIn": "Iniciar Sessão",
@@ -198,5 +259,384 @@
   "theme": {
     "dark": "Modo Escuro",
     "light": "Modo Claro"
+  },
+  "lojas": {
+    "title": "Lojas",
+    "subtitle": "Gerir lojas da rede Express Glass",
+    "novaLoja": "Nova Loja",
+    "editarLoja": "Editar Loja",
+    "eliminarLoja": "Eliminar Loja",
+    "importarExcel": "Importar Excel",
+    "descarregarTemplate": "Descarregar Template",
+    "nome": "Nome",
+    "email": "Email",
+    "gestor": "Gestor",
+    "acoes": "Ações",
+    "selecionarTodas": "Selecionar todas",
+    "eliminarSelecionadas": "Eliminar",
+    "confirmarEliminar": "Tem a certeza que deseja eliminar esta loja?",
+    "confirmarEliminarMultiplas": "Tem a certeza que deseja eliminar as lojas selecionadas?",
+    "lojaCriada": "Loja criada com sucesso",
+    "lojaAtualizada": "Loja atualizada com sucesso",
+    "lojaEliminada": "Loja eliminada com sucesso",
+    "lojasEliminadas": "loja(s) eliminada(s) com sucesso",
+    "lojasImportadas": "loja(s) importada(s)",
+    "lojasIgnoradas": "loja(s) ignorada(s) (já existem)",
+    "errosEncontrados": "erro(s) encontrado(s)",
+    "templateDescarregado": "Template descarregado com sucesso",
+    "selecionarFicheiro": "Selecione um ficheiro Excel",
+    "previewImportacao": "Pré-visualização da Importação",
+    "importar": "Importar",
+    "cancelar": "Cancelar",
+    "minimoRelatoriosLivres": "Mínimo Relatórios Livres",
+    "minimoRelatoriosCompletos": "Mínimo Relatórios Completos",
+    "semLojas": "Nenhuma loja registada",
+    "criarPrimeiraLoja": "Crie a primeira loja para começar"
+  },
+  "gestores": {
+    "title": "Gestores",
+    "subtitle": "Gerir gestores da rede Express Glass",
+    "novoGestor": "Novo Gestor",
+    "editarGestor": "Editar Gestor",
+    "eliminarGestor": "Eliminar Gestor",
+    "nome": "Nome",
+    "email": "Email",
+    "role": "Função",
+    "lojas": "Lojas",
+    "acoes": "Ações",
+    "selecionarTodos": "Selecionar todos",
+    "eliminarSelecionados": "Eliminar",
+    "confirmarEliminar": "Tem a certeza que deseja eliminar este gestor?",
+    "confirmarEliminarMultiplos": "Tem a certeza que deseja eliminar os gestores selecionados?",
+    "gestorCriado": "Gestor criado com sucesso",
+    "gestorAtualizado": "Gestor atualizado com sucesso",
+    "gestorEliminado": "Gestor eliminado com sucesso",
+    "gestoresEliminados": "gestor(es) eliminado(s) com sucesso",
+    "semGestores": "Nenhum gestor registado",
+    "criarPrimeiroGestor": "Crie o primeiro gestor para começar",
+    "associarLojas": "Associar Lojas",
+    "lojasAssociadas": "Lojas Associadas",
+    "lojasDisponiveis": "Lojas Disponíveis",
+    "lojaAssociada": "Loja associada com sucesso",
+    "lojaRemovida": "Loja removida com sucesso",
+    "promoverAdmin": "Promover a Admin",
+    "confirmarPromocao": "Tem a certeza que deseja promover este gestor a administrador?",
+    "gestorPromovido": "Gestor promovido a administrador com sucesso",
+    "admin": "Administrador",
+    "gestor": "Gestor",
+    "pesquisarLojas": "Pesquisar lojas..."
+  },
+  "utilizadores": {
+    "title": "Utilizadores",
+    "subtitle": "Gerir utilizadores do sistema",
+    "nome": "Nome",
+    "email": "Email",
+    "role": "Função",
+    "estado": "Estado",
+    "acoes": "Ações",
+    "ativo": "Ativo",
+    "pendente": "Pendente",
+    "admin": "Administrador",
+    "gestor": "Gestor",
+    "user": "Utilizador",
+    "semUtilizadores": "Nenhum utilizador registado"
+  },
+  "relatorios": {
+    "title": "Relatórios",
+    "subtitle": "Visualizar todos os relatórios",
+    "livres": "Livres",
+    "completos": "Completos",
+    "todos": "Todos",
+    "filtrarPorLoja": "Filtrar por loja",
+    "filtrarPorGestor": "Filtrar por gestor",
+    "filtrarPorData": "Filtrar por data",
+    "de": "De",
+    "ate": "Até",
+    "limparFiltros": "Limpar filtros",
+    "exportarPDF": "Exportar PDF",
+    "exportarSelecionados": "Exportar Selecionados",
+    "semRelatorios": "Nenhum relatório encontrado",
+    "verDetalhes": "Ver detalhes",
+    "editarRelatorio": "Editar relatório",
+    "eliminarRelatorio": "Eliminar relatório",
+    "confirmarEliminar": "Tem a certeza que deseja eliminar este relatório?",
+    "relatorioEliminado": "Relatório eliminado com sucesso",
+    "relatorioAtualizado": "Relatório atualizado com sucesso",
+    "enviarEmail": "Enviar por Email",
+    "emailEnviado": "Email enviado com sucesso",
+    "erroEnviarEmail": "Erro ao enviar email",
+    "gestor": "Gestor",
+    "loja": "Loja",
+    "data": "Data",
+    "tipo": "Tipo",
+    "descricao": "Descrição",
+    "apenasNaoVistos": "Apenas não vistos",
+    "marcarComoVisto": "Marcar como visto"
+  },
+  "relatorioLivre": {
+    "title": "Relatório Livre",
+    "subtitle": "Criar um novo relatório de visita",
+    "selecionarLoja": "Selecionar Loja",
+    "dataVisita": "Data da Visita",
+    "horaVisita": "Hora da Visita",
+    "descricao": "Descrição da Visita",
+    "descricaoPlaceholder": "Descreva os pontos principais da visita...",
+    "pendentes": "Pendentes",
+    "adicionarPendente": "Adicionar Pendente",
+    "fotos": "Fotos",
+    "adicionarFotos": "Adicionar Fotos",
+    "submeter": "Submeter Relatório",
+    "cancelar": "Cancelar",
+    "relatorioCriado": "Relatório criado com sucesso",
+    "erroCriar": "Erro ao criar relatório",
+    "camposObrigatorios": "Por favor preencha todos os campos obrigatórios"
+  },
+  "relatorioCompleto": {
+    "title": "Relatório Completo",
+    "subtitle": "Criar um relatório detalhado de visita",
+    "selecionarLoja": "Selecionar Loja",
+    "dataVisita": "Data da Visita",
+    "proximaPagina": "Próxima Página",
+    "paginaAnterior": "Página Anterior",
+    "submeter": "Submeter Relatório",
+    "cancelar": "Cancelar",
+    "relatorioCriado": "Relatório criado com sucesso",
+    "erroCriar": "Erro ao criar relatório",
+    "paginas": {
+      "episFardamento": "EPIs e Fardamento",
+      "kit1sSocorros": "Kit 1ºs Socorros",
+      "consumiveis": "Consumíveis",
+      "espacoFisico": "Espaço Físico",
+      "reclamacoes": "Reclamações",
+      "vendasComplementares": "Vendas Complementares",
+      "fichasServico": "Fichas de Serviço",
+      "documentacaoObrigatoria": "Documentação Obrigatória",
+      "reuniaoQuinzenal": "Reunião Quinzenal",
+      "resumoColaboradores": "Resumo e Colaboradores"
+    },
+    "conforme": "Conforme",
+    "naoConforme": "Não Conforme",
+    "naoAplicavel": "N/A",
+    "observacoes": "Observações",
+    "pontosPositivos": "Pontos Positivos a Destacar",
+    "pontosNegativos": "Pontos Negativos a Destacar",
+    "resumoSupervisao": "Resumo da Supervisão",
+    "pendentes": "Pendentes"
+  },
+  "meusRelatorios": {
+    "title": "Meus Relatórios",
+    "subtitle": "Visualizar os seus relatórios",
+    "semRelatorios": "Ainda não criou nenhum relatório"
+  },
+  "relatoriosIA": {
+    "title": "Relatórios IA",
+    "subtitle": "Gerar relatórios automáticos com inteligência artificial",
+    "tipoRelatorio": "Tipo de Relatório",
+    "diario": "Diário",
+    "semanal": "Semanal",
+    "mensal": "Mensal",
+    "trimestral": "Trimestral",
+    "gerarRelatorio": "Gerar Relatório",
+    "aGerar": "A gerar relatório...",
+    "relatorioGerado": "Relatório gerado com sucesso",
+    "erroGerar": "Erro ao gerar relatório",
+    "exportarPDF": "Exportar PDF",
+    "verHistorico": "Ver Histórico",
+    "ultimaGeracao": "Última geração",
+    "semDados": "Não há dados suficientes para gerar este relatório"
+  },
+  "historicoIA": {
+    "title": "Histórico IA",
+    "subtitle": "Histórico de relatórios gerados por IA",
+    "semHistorico": "Nenhum relatório IA gerado",
+    "tipo": "Tipo",
+    "data": "Data",
+    "verRelatorio": "Ver Relatório",
+    "eliminar": "Eliminar"
+  },
+  "historicoPontos": {
+    "title": "Histórico de Pontos",
+    "subtitle": "Evolução dos pontos positivos e negativos por loja",
+    "selecionarLoja": "Selecionar Loja",
+    "periodo": "Período",
+    "pontosPositivos": "Pontos Positivos",
+    "pontosNegativos": "Pontos Negativos",
+    "semDados": "Sem dados para o período selecionado"
+  },
+  "historicoLoja": {
+    "title": "Histórico da Loja",
+    "subtitle": "Visualizar histórico completo de uma loja",
+    "selecionarLoja": "Selecionar Loja",
+    "relatorios": "Relatórios",
+    "pendentes": "Pendentes",
+    "reunioes": "Reuniões",
+    "ocorrencias": "Ocorrências",
+    "semHistorico": "Sem histórico para esta loja"
+  },
+  "alertas": {
+    "title": "Alertas",
+    "subtitle": "Gerir alertas do sistema",
+    "pendentes": "Pendentes",
+    "resolvidos": "Resolvidos",
+    "todos": "Todos",
+    "marcarResolvido": "Marcar como Resolvido",
+    "semAlertas": "Nenhum alerta registado",
+    "loja": "Loja",
+    "tipo": "Tipo",
+    "mensagem": "Mensagem",
+    "data": "Data",
+    "estado": "Estado",
+    "pontosNegativosConsecutivos": "Pontos negativos consecutivos"
+  },
+  "configAlertas": {
+    "title": "Configuração de Alertas",
+    "subtitle": "Configurar regras de alertas automáticos",
+    "threshold": "Limite de pontos negativos consecutivos",
+    "thresholdDesc": "Número de relatórios consecutivos com pontos negativos para disparar alerta",
+    "guardar": "Guardar Configurações",
+    "configuracaoGuardada": "Configuração guardada com sucesso"
+  },
+  "reunioesGestores": {
+    "title": "Reuniões de Gestores",
+    "subtitle": "Gerir reuniões entre gestores",
+    "novaReuniao": "Nova Reunião",
+    "semReunioes": "Nenhuma reunião registada"
+  },
+  "reunioesLojas": {
+    "title": "Reuniões de Lojas",
+    "subtitle": "Gerir reuniões quinzenais das lojas",
+    "novaReuniao": "Nova Reunião",
+    "semReunioes": "Nenhuma reunião registada"
+  },
+  "resultados": {
+    "title": "Resultados",
+    "subtitle": "Dashboard de resultados e métricas",
+    "uploadTitle": "Upload de Resultados",
+    "uploadSubtitle": "Carregar ficheiro Excel com resultados",
+    "dashboardTitle": "Dashboard de Resultados",
+    "dashboardSubtitle": "Visualizar métricas e KPIs",
+    "comparacaoTitle": "Comparação de Lojas",
+    "comparacaoSubtitle": "Comparar desempenho entre lojas",
+    "relatorioIATitle": "Relatório IA de Resultados",
+    "relatorioIASubtitle": "Análise automática de resultados com IA",
+    "mes": "Mês",
+    "ano": "Ano",
+    "loja": "Loja",
+    "vendas": "Vendas",
+    "servicos": "Serviços",
+    "reclamacoes": "Reclamações",
+    "satisfacao": "Satisfação",
+    "semResultados": "Sem resultados para o período selecionado"
+  },
+  "todos": {
+    "title": "To-Do",
+    "subtitle": "Gerir tarefas e pendentes",
+    "novaTarefa": "Nova Tarefa",
+    "minhasTarefas": "Minhas Tarefas",
+    "atribuidas": "Atribuídas a Mim",
+    "criadas": "Criadas por Mim",
+    "todas": "Todas",
+    "titulo": "Título",
+    "descricao": "Descrição",
+    "prioridade": "Prioridade",
+    "dataLimite": "Data Limite",
+    "atribuirA": "Atribuir a",
+    "loja": "Loja",
+    "estado": "Estado",
+    "pendente": "Pendente",
+    "emProgresso": "Em Progresso",
+    "concluida": "Concluída",
+    "baixa": "Baixa",
+    "media": "Média",
+    "alta": "Alta",
+    "urgente": "Urgente",
+    "semTarefas": "Nenhuma tarefa registada",
+    "tarefaCriada": "Tarefa criada com sucesso",
+    "tarefaAtualizada": "Tarefa atualizada com sucesso",
+    "tarefaEliminada": "Tarefa eliminada com sucesso"
+  },
+  "pendentesPage": {
+    "title": "Pendentes",
+    "subtitle": "Gerir pendentes por loja",
+    "filtrarPorLoja": "Filtrar por loja",
+    "apenasAtivos": "Apenas ativos",
+    "apenasNaoVistos": "Apenas não vistos",
+    "marcarResolvido": "Marcar como Resolvido",
+    "marcarPendente": "Marcar como Pendente",
+    "semPendentes": "Nenhum pendente registado",
+    "loja": "Loja",
+    "descricao": "Descrição",
+    "criadoEm": "Criado em",
+    "estado": "Estado",
+    "resolvido": "Resolvido",
+    "pendente": "Pendente"
+  },
+  "ocorrencias": {
+    "title": "Ocorrências",
+    "subtitle": "Registar e gerir ocorrências",
+    "novaOcorrencia": "Nova Ocorrência",
+    "historicoTitle": "Histórico de Ocorrências",
+    "historicoSubtitle": "Visualizar histórico de ocorrências",
+    "selecionarLoja": "Selecionar Loja",
+    "tipo": "Tipo",
+    "descricao": "Descrição",
+    "data": "Data",
+    "gravidade": "Gravidade",
+    "baixa": "Baixa",
+    "media": "Média",
+    "alta": "Alta",
+    "critica": "Crítica",
+    "semOcorrencias": "Nenhuma ocorrência registada",
+    "ocorrenciaCriada": "Ocorrência registada com sucesso"
+  },
+  "categorias": {
+    "title": "Categorias",
+    "subtitle": "Gerir categorias de tarefas e ocorrências",
+    "novaCategoria": "Nova Categoria",
+    "nome": "Nome",
+    "cor": "Cor",
+    "semCategorias": "Nenhuma categoria registada",
+    "categoriaCriada": "Categoria criada com sucesso",
+    "categoriaEliminada": "Categoria eliminada com sucesso"
+  },
+  "assistenteIA": {
+    "title": "Assistente IA",
+    "subtitle": "Conversar com o assistente inteligente",
+    "placeholder": "Escreva a sua mensagem...",
+    "enviar": "Enviar",
+    "limparConversa": "Limpar Conversa",
+    "pensando": "A pensar...",
+    "erro": "Ocorreu um erro. Por favor tente novamente."
+  },
+  "minhasLojas": {
+    "title": "Minhas Lojas",
+    "subtitle": "Lojas sob sua gestão",
+    "semLojas": "Não tem lojas atribuídas",
+    "verHistorico": "Ver Histórico",
+    "criarRelatorio": "Criar Relatório"
+  },
+  "resumosGlobais": {
+    "title": "Resumos Globais",
+    "subtitle": "Gerar e visualizar resumos globais",
+    "gerarResumo": "Gerar Resumo",
+    "verHistorico": "Ver Histórico",
+    "tipo": "Tipo",
+    "semanal": "Semanal",
+    "mensal": "Mensal",
+    "trimestral": "Trimestral",
+    "semResumos": "Nenhum resumo gerado"
+  },
+  "validation": {
+    "campoObrigatorio": "Este campo é obrigatório",
+    "emailInvalido": "Email inválido",
+    "minimoCaracteres": "Mínimo de {min} caracteres",
+    "maximoCaracteres": "Máximo de {max} caracteres",
+    "valorInvalido": "Valor inválido"
+  },
+  "errors": {
+    "generico": "Ocorreu um erro. Por favor tente novamente.",
+    "semPermissao": "Não tem permissão para realizar esta ação.",
+    "sessaoExpirada": "A sua sessão expirou. Por favor inicie sessão novamente.",
+    "conexao": "Erro de conexão. Verifique a sua ligação à internet."
   }
 }
